--- a/src/.env
+++ b/src/.env
@@ -1,5 +1,5 @@
 PORT=5000
-MONGO_URI=mongodb://localhost:27017/nexbuy
+MONGO_URI=mongodb://localhost:27017/dishly
 LOGIN_SECRET=asd!@asd
 PREFIX_SECRET=srToken
 JWT_SECRET=mysecretkey
